# krishi_sakhi

./: NEARBY_FARMERS_MAP_DOCUMENTATION.md  README.md  firebase.json  pubspec.yaml  untranslated_ta.txt
android/app/: build.gradle.kts  google-services.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/auth/: auth_repository.dart  auth_service.dart
lib/components/: drawer.dart  drawer_btn.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ml.dart  app_localizations_ta.dart  app_ml.arb
lib/models/: courses_model.dart  farm_project.dart  forum_models.dart  home_feed_models.dart
lib/posts/: post_repository.dart  post_service.dart
lib/providers/: auth_provider.dart
lib/screens/: about_screen.dart  ai_responses_list_screen.dart  chatbot_screen.dart  courses_detail_screen.dart  courses_screen.dart  create_account_screen.dart  create_post_screen.dart  form_screen.dart  forum.dart  forum_detail_screen.dart  forum_screen.dart  home_screen.dart  main_screen.dart  map_screen.dart  map_screen.dart.bak  nearby_farmers_map_screen.dart  news_detail_screen.dart  news_list_screen.dart  otp_screen.dart  (+9 more)
linux/: CMakeLists.txt
server/: .env  Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
server/config/: settings.py
server/models/: model.py
server/rag/: rag.py  search_engine.py
server/utils/: document_processor.py  pinecone_client.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+29 files in other folders)
