[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "groq>=0.31.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "openai>=1.107.0",
    "pinecone>=7.3.0",
    "pypdf>=6.0.0",
    "uvicorn>=0.35.0",
]

